[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A Matrix homeserver client API."
documentation = "https://ruma.github.io/ruma/ruma/"
homepage = "https://github.com/ruma/ruma"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.1.0"

[dependencies]
argon2rs = "0.2.5"
base64 = "0.3.0"
bodyparser = "0.6.0"
chrono = "0.3.0"
clap = "2.20.3"
env_logger = "0.4.0"
iron = "0.5.1"
log = "0.3.6"
macaroons = "0.3.3"
mount = "0.3.0"
persistent = "0.3.0"
plugin = "0.2.6"
r2d2 = "0.7.1"
r2d2-diesel = "0.10.0"
rand = "0.3.15"
router = "0.5.1"
ruma-events = "0.5.0"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.5"
serde_yaml = "0.6.0"
toml = "0.3.0"
unicase = "1.4.0"
url = "1.4.0"

[dependencies.diesel]
features = ["postgres"]
version = "0.10.1"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.10.1"

[dependencies.ruma-identifiers]
features = ["diesel"]
version = "0.8.1"

[dev-dependencies]
iron-test = "0.5.0"

[features]
default = ["swagger"]
swagger = []
