[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A Matrix homeserver."
documentation = "https://ruma.io"
homepage = "https://ruma.io"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.1.0"

[[bin]]
doc = false
name = "ruma"

[[bin]]
doc = false
name = "ruma-client-server"

[[bin]]
doc = false
name = "ruma-extra-server"

[dependencies]
argon2rs = "0.2.5"
base64 = "0.4.1"
bodyparser = "0.7.0"
chrono = "0.3.0"
clap = "2.23.3"
env_logger = "0.4.2"
iron = "0.5.1"
log = "0.3.7"
macaroons = "0.3.3"
mount = "0.3.0"
persistent = "0.3.0"
plugin = "0.2.6"
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
rand = "0.3.15"
router = "0.5.1"
ruma-events = "0.8.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_yaml = "0.7.0"
toml = "0.4.0"
unicase = "1.4.0"
url = "1.4.0"

[dependencies.diesel]
features = ["postgres"]
version = "0.12.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.12.0"

[dependencies.ruma-identifiers]
features = ["diesel"]
version = "0.11.0"

[dev-dependencies]
iron-test = "0.5.0"

[lib]
doctest = false
