[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A Matrix homeserver."
documentation = "https://ruma.io"
edition = "2018"
homepage = "https://ruma.io"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.1.0"

[[bin]]
doc = false
name = "ruma"

[[bin]]
doc = false
name = "ruma-client-server"

[[bin]]
doc = false
name = "ruma-extra-server"

[dependencies]
argon2rs = "0.2.5"
base64 = "0.10.1"
bodyparser = "0.8.0"
chrono = "0.4.6"
clap = "2.33.0"
env_logger = "0.6.1"
iron = "0.6.0"
log = "0.4.6"
macaroons = "0.3.3"
mount = "0.4.0"
persistent = "0.4.0"
plugin = "0.2.6"
rand = "0.6.5"
router = "0.6.0"
ruma-events = "0.12.0"
serde_json = "1.0.39"
serde_yaml = "0.8.9"
toml = "0.5.1"
unicase = "1.4.0"
url = "1.7.2"
diesel_migrations = "1.4.0"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.4.2"

[dependencies.ruma-identifiers]
features = ["diesel"]
version = "0.12.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.92"

[dev-dependencies]
iron-test = "0.6.0"

[lib]
doctest = false
